playbook_to_create_docekrImage.yaml 2

--- a/playbook_to_create_docekrImage.yaml
+++ b/playbook_to_create_docekrImage.yaml
@@ -1,6 +1,5 @@
 ---
-- name: Create docker image
-  hosts: ansible-server
+- hosts: ansible-server
   become: true
   tasks:
   - name: create docker image
