playbook_to_create_docekrImage.yaml 3

--- a/playbook_to_create_docekrImage.yaml
+++ b/playbook_to_create_docekrImage.yaml
@@ -2,7 +2,7 @@
 - hosts: ansible-server
   become: true
   tasks:
-  - name: create docker image
+  - name: create images
     command: docker image build -t devopsImage:latest .
     args:
       chdir /opt/k8s-lab
