--- a/playbook_to_deploy.yaml
+++ b/playbook_to_deploy.yaml
@@ -1,7 +1,7 @@
 ---
 - name: to deploy
   hosts: kubernetes
-  user: ubuntu
+  user: ansible
   tasks:
     - name: create a deployment
       command: kubectl apply -f k8s_Deployment.yaml
