--- a/k8s_Deployment.yaml
+++ b/k8s_Deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata: 
-  name: MyDeployment
+metadata:
+  name: mydeployment
 spec:
   selector:
     matchLabels:
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: devops-project-container
           image: bhaskar150/devopsImage
-          imagePullPolicy: always
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
       
