--- a/playbook_to_deploy_service.yaml
+++ b/playbook_to_deploy_service.yaml
@@ -1,7 +1,7 @@
 ---
 - name: to deploy service
   hosts: kubernetes
-  user: ubuntu
+  become: true
   tasks:
     - name: to deploy service
       command: kubectl apply -f k8s_service.yaml
